<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/foodName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/foodName_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_item"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@+id/foodName_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calorieAmount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/calorie_amount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodName_label" />

    <EditText
        android:id="@+id/calorieAmount_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_calorie_amount"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/calorieAmount_label"
        app:layout_constraintTop_toBottomOf="@+id/foodName_entry" />



</androidx.constraintlayout.widget.ConstraintLayout>